--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<title>hello there</title>
+<title>glasgoe celtic`1</title>
 </head>
 
 <body>
